--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,15 @@ baseurl: ""
 title: Omer Faruk AKDAG
 
 # Short description of your site
-description: Blog
+description: ""
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
+  Blog: ""
   Hakkımda: "aboutme"
+
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
